# usbview

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  about-dialog.c  aclocal.m4  autogen.sh  callbacks.c  com.kroah.usbview.metainfo.xml  config.h  config.h.in  configure  configure-dialog.c  configure.ac  configure.in  interface.c  main.c  org.freedesktop.pkexec.usbview.policy  showmessage.c  sysfs.c  sysfs.h  usb_icon.xpm  usbparse.c  usbparse.h  usbtree.c  usbtree.h  usbview.8  usbview.desktop  usbview.spdx  usbview.spec  usbview_icon.xpm  usbview_logo.xcf  usbview_logo.xpm
ccan/: config.h
ccan/check_type/: check_type.h
ccan/container_of/: container_of.h
ccan/list/: list.h
ccan/str/: str.h  str_debug.h
debian/: changelog  control  copyright  rules  usbview.desktop  usbview.dirs  usbview.manpages  usbview.menu
intl/: Makefile
po/: Makefile  Makefile.in  cat-id-tbl.c  usbview.pot
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  config.c  config.h  interface.c  interface.h  main.c  showmessage.c  showmessage.h  support.c  usbparse.c  usbtree.c  usbtree.h
src/.deps/: callbacks.P  interface.P  main.P  support.P  usbtree.P
